webook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            # mysql 存储数据的目录，指挂载到容器的哪个地方
            # 当容器在读写这个目录时，实际上读写的是 mysql-storage
            - mountPath: /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      volumes:
        # 而 mysql-storage 究竟是什么？它被一个叫做 webook-mysql-pvc 的东西声明
        - name: mysql-storage
          persistentVolumeClaim:
            # PVC persistent volume claim
            claimName: webook-mysql-pvc
