webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  # 这是个 service
  name: webook
spec:
  selector:
    app: webook
  ports:
    - protocol: TCP
      port: 98
      targetPort: 8080
  type: LoadBalancer
